--- a/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
+++ b/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
@@ -47,8 +47,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
@@ -60,7 +58,6 @@
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Entity.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
@@ -223,6 +220,42 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AreasContent\bootstrap.css" />
+    <Content Include="AreasContent\bootstrap.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.bootstrap.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.bootstrap.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.bootstrap4.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.bootstrap4.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.foundation.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.foundation.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.jqueryui.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.jqueryui.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.semanticui.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\dataTables.semanticui.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\jquery.dataTables.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\css\jquery.dataTables.min.css" />
+    <Content Include="AreasContent\DataTables-1.10.18\images\sort_asc.png" />
+    <Content Include="AreasContent\DataTables-1.10.18\images\sort_asc_disabled.png" />
+    <Content Include="AreasContent\DataTables-1.10.18\images\sort_both.png" />
+    <Content Include="AreasContent\DataTables-1.10.18\images\sort_desc.png" />
+    <Content Include="AreasContent\DataTables-1.10.18\images\sort_desc_disabled.png" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.bootstrap.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.bootstrap.min.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.bootstrap4.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.bootstrap4.min.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.foundation.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.foundation.min.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.jqueryui.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.jqueryui.min.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.semanticui.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\dataTables.semanticui.min.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\jquery.dataTables.js" />
+    <Content Include="AreasContent\DataTables-1.10.18\js\jquery.dataTables.min.js" />
+    <Content Include="AreasContent\datatables.css" />
+    <Content Include="AreasContent\datatables.js" />
+    <Content Include="AreasContent\datatables.min.css" />
+    <Content Include="AreasContent\datatables.min.js" />
+    <Content Include="AreasContent\Site.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap1.css" />
