--- a/DIENMAYQUYETTIENTest/DIENMAYQUYETTIENTest.csproj
+++ b/DIENMAYQUYETTIENTest/DIENMAYQUYETTIENTest.csproj
@@ -76,6 +76,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BangsanphamTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
