unit test cho create và index

--- a/DIENMAYQUYETTIENTest/DIENMAYQUYETTIENTest.csproj
+++ b/DIENMAYQUYETTIENTest/DIENMAYQUYETTIENTest.csproj
@@ -79,6 +79,7 @@
     <Compile Include="BangsanphamTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BanghoadonTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DIENMAYQUYETTIEN\DIENMAYQUYETTIEN.csproj">
