--- a/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
+++ b/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\CashBillController.cs" />
     <Compile Include="Areas\Admin\Controllers\CashBillDetailController.cs" />
+    <Compile Include="Areas\Admin\Controllers\InstallBillDetailController.cs" />
+    <Compile Include="Areas\Admin\Controllers\InstallmentBillController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductAdminController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -458,6 +460,16 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Areas\Admin\Views\InstallmentBill\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallmentBill\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallmentBill\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallmentBill\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallmentBill\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallBillDetail\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallBillDetail\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallBillDetail\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallBillDetail\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\InstallBillDetail\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -531,7 +543,7 @@
   </Target>
   <ProjectExtensions>
     <VisualStudio>
-      <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
+      <FlavorProperties GUID="{349C5851-65DF-11DA-9384-00065B846F21}">
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
