Chưa hoàn thành

--- a/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
+++ b/DIENMAYQUYETTIEN/DIENMAYQUYETTIEN.csproj
@@ -366,6 +366,47 @@
     <Content Include="AreasContent\vendor\select2\select2.js" />
     <Content Include="AreasContent\vendor\select2\select2.min.css" />
     <Content Include="AreasContent\vendor\select2\select2.min.js" />
+    <Content Include="assets\css\bootstrap.min.css" />
+    <Content Include="assets\css\plugins.css" />
+    <Content Include="assets\css\responsive.css" />
+    <Content Include="assets\css\roboto-webfont.css" />
+    <Content Include="assets\css\style.css" />
+    <Content Include="assets\images\1.jpg" />
+    <Content Include="assets\images\2.jpg" />
+    <Content Include="assets\images\3.png" />
+    <Content Include="assets\images\4.jpg" />
+    <Content Include="assets\images\5.png" />
+    <Content Include="assets\images\6.png" />
+    <Content Include="assets\images\7.jpg" />
+    <Content Include="assets\images\8.png" />
+    <Content Include="assets\images\9.jpg" />
+    <Content Include="assets\images\banner.jpg" />
+    <Content Include="assets\images\bg.png" />
+    <Content Include="assets\images\galaxy.jpeg" />
+    <Content Include="assets\images\img1.png" />
+    <Content Include="assets\images\img2.png" />
+    <Content Include="assets\images\LGBanner.jpg" />
+    <Content Include="assets\images\Logo_QT.jpg" />
+    <Content Include="assets\images\maygiat.png" />
+    <Content Include="assets\images\panasonicbanner.jpg" />
+    <Content Include="assets\images\preloading.gif" />
+    <Content Include="assets\images\samsung.png" />
+    <Content Include="assets\images\samsungbanner.jpg" />
+    <Content Include="assets\images\slideshow_1.jpg" />
+    <Content Include="assets\images\slideshow_2.jpg" />
+    <Content Include="assets\images\sony.png" />
+    <Content Include="assets\images\sonybanner.jpg" />
+    <Content Include="assets\images\tivisamsung.jpg" />
+    <Content Include="assets\images\tivisony.jpg" />
+    <Content Include="assets\images\toshiba.png" />
+    <Content Include="assets\images\toshibabanner.jpg" />
+    <Content Include="assets\images\tulanh.jpeg" />
+    <Content Include="assets\js\main.js" />
+    <Content Include="assets\js\modernizr.js" />
+    <Content Include="assets\js\plugins.js" />
+    <Content Include="assets\js\vendor\bootstrap.min.js" />
+    <Content Include="assets\js\vendor\jquery-1.11.2.min.js" />
+    <Content Include="assets\js\vendor\modernizr-2.8.3-respond-1.4.2.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap1.css" />
@@ -575,6 +616,24 @@
     <Content Include="AreasContent\Layout\scss\paper\_variables.scss" />
     <Content Include="Areas\Admin\Views\Shared\_AdminLayout3.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_AdminLayout4.cshtml" />
+    <Content Include="assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="assets\fonts\FontAwesome.otf" />
+    <Content Include="assets\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="assets\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="assets\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="assets\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="assets\fonts\Roboto-Light-webfont.eot" />
+    <Content Include="assets\fonts\Roboto-Light-webfont.svg" />
+    <Content Include="assets\fonts\Roboto-Light-webfont.ttf" />
+    <Content Include="assets\fonts\Roboto-Light-webfont.woff" />
+    <Content Include="assets\fonts\Roboto-Regular-webfont.eot" />
+    <Content Include="assets\fonts\Roboto-Regular-webfont.svg" />
+    <Content Include="assets\fonts\Roboto-Regular-webfont.ttf" />
+    <Content Include="assets\fonts\Roboto-Regular-webfont.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -624,6 +683,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Install.cshtml" />
+    <Content Include="Views\Home\News.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
